--- a/css/kraken.css
+++ b/css/kraken.css
@@ -1,5 +1,5 @@
 /*Kraken by @ivan_cduran (ivancduran.com)*/
-/*Toast by @_dte (daneden.me) modified by @ivan_cduran (ivancduran.com)*/
+/*Toast 1.0 by @_dte (daneden.me) modified by @ivan_cduran (ivancduran.com)*/
 /*Responsive slides by @viljamis (responsive-slides.viljamis.com) modified by @ivan_cduran (ivancduran.com)*/
 @import url('reset.css');
 @import url('grid.css');
