--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,17 @@ hr{
 	list-style-type: none;
 }
 
+.menuBack{
+	width: 100%;
+	height: 100%;
+	background-color: #333;
+	position: absolute;
+	top:0;
+	z-index: 9;
+	opacity: 0;
+	display: none;
+}
+
 /*********************************MEDIA*********************************/
 
 /*landscape phone*/
