--- a/css/menu.css
+++ b/css/menu.css
@@ -47,7 +47,7 @@
 /* left nav */
 .nav.left ul {
   text-align: left;
-  padding-left: 25px;
+  /*padding-left: 25px;*/
 }
 
 /* right nav */
@@ -66,10 +66,11 @@
   position:absolute;
   visibility: hidden;
   text-align: center;
-  border-top:3px solid #3c3c3c; border-bottom:3px solid #3c3c3c;
-  margin: 0px 0 0 0;
-  padding:0;
-  background-color: #141414;
+  display: block;
+  /*border-top:3px solid #3c3c3c; border-bottom:3px solid #3c3c3c;*/
+  /*margin: 0px 0 0 0;*/
+  /*padding:0;*/
+  /*background-color: #141414;*/
 }
 
 .nav li ul li {
