--- a/css/kraken.css
+++ b/css/kraken.css
@@ -8,3 +8,6 @@
 @import url('menu.css');
 @import url('buttons.css');
 @import url('font.css');
+@import url('progressbar.css');
+@import url('tooltip.css');
+@import url('caption.css');
