--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-/*nav, li, img {
-  -webkit-box-sizing: border-box;
+nav, li, img, .progress > span {
+/*  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  box-sizing: border-box;*/
   -webkit-transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
   -moz-transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
   transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-}*/
+}
 
 input{
 	border: 2px solid #ccc;
@@ -110,7 +110,6 @@ hr{
 	text-align: center;
 }
 
-
 .box{
     margin: 0px;
     padding: 25px;
@@ -165,6 +164,23 @@ hr{
 	background: -o-linear-gradient(top, #32323a 0%, #141414 100%);
 	background: -ms-linear-gradient(top, #32323a 0%, #141414 100%);
 	background: linear-gradient(to bottom, #32323a 0%, #141414 100%);
+}
+
+.bottom-bar {
+  background: #141414;
+  background: -moz-linear-gradient(top, #32323a 0%, #141414 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32323a), color-stop(100%, #141414));
+  background: -webkit-linear-gradient(top, #32323a 0%, #141414 100%);
+  background: -o-linear-gradient(top, #32323a 0%, #141414 100%);
+  background: -ms-linear-gradient(top, #32323a 0%, #141414 100%);
+  background: linear-gradient(to bottom, #32323a 0%, #141414 100%);
+  /*border-bottom: 2px solid #0fa1e0;*/
+  position: fixed;
+  z-index: 9;
+  width: 100%;
+  height: 30px;
+  bottom: 0px;
+  padding-top: 10px;
 }
 
 .footer a:link {text-decoration:none; color:#FFF;}
