--- a/css/font.css
+++ b/css/font.css
@@ -29,6 +29,10 @@ body {
 	font: 100%/1.5 'UbuntuL','Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+html{
+    text-shadow: 0px 0px 15px rgba(150, 150, 150, 0.4);
+}
+
 h1 {
     font-size: 3em; /* 48 / 16 */
     line-height: 1em; /* 48 / 48 */
