--- a/css/anim.css
+++ b/css/anim.css
@@ -26,7 +26,7 @@
 	-moz-animation-name: shake;
 	-o-animation-name: shake;
 	animation-name: shake;
-	border: 1px solid red;
+	border: 1px solid red !important;
 }
 
 .sken{
