--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,11 @@
 #menu {
   background: #141414;
-  background: -moz-linear-gradient(top, #32323a 0%, #141414 100%);
+/*  background: -moz-linear-gradient(top, #32323a 0%, #141414 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32323a), color-stop(100%, #141414));
   background: -webkit-linear-gradient(top, #32323a 0%, #141414 100%);
   background: -o-linear-gradient(top, #32323a 0%, #141414 100%);
   background: -ms-linear-gradient(top, #32323a 0%, #141414 100%);
-  background: linear-gradient(to bottom, #32323a 0%, #141414 100%);
+  background: linear-gradient(to bottom, #32323a 0%, #141414 100%);*/
   /*border-bottom: 2px solid #0fa1e0;*/
   position: fixed;
   z-index: 9;
@@ -42,9 +42,16 @@
   border-radius: 5px;
 }
 .nav .current a {
-  background: #999;
+  /*background: #999;*/
   color: #fff;
   border-radius: 5px;
+
+   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#cacaca), to(#848484));
+   background-image: -moz-linear-gradient(top, #cacaca, #848484);
+
+   box-shadow: inset 0 0 10px #000;
+     -moz-box-shadow: inset 0 0 10px #000;
+     -webkit-box-shadow: inset 0 0 10px #000;
 }
 
 /* left nav */
