--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+	height: 100%;
+	min-height: 100%;
+}
+
 nav, li, img, .progress > span {
 	/*  -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -8,7 +13,7 @@ nav, li, img, .progress > span {
 }
 
 .wrap{
-		-webkit-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
+  	-webkit-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
 	-moz-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
 	transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
 }
@@ -38,7 +43,6 @@ footer {
 	font-size: 12px;
 	width: 100%;
 	height: 280px;
-	width: 100%;
 	line-height: 10px;
 	clear: both;
 	position: fixed;
@@ -186,6 +190,9 @@ footer {
 	color: #fff;
 	background: #141414;*/
 }
+.footer_union{
+	margin-top: -25px;
+}
 
 .bottom-bar {
 	background: #141414;
@@ -225,6 +232,7 @@ footer {
 
 .footer{
 	background: #333;
+	padding-top:10px;
 }
 
 .background-top{
