--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,6 @@ nav, li, img, .progress > span {
 	transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
 }
 
-.wrap{
-  	-webkit-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-	-moz-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-	transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-}
-
 input[type=text], textarea{
 	border: 1px solid #aaaaaa;
 	/*background: url("../img/input_bg.png") no-repeat scroll 0 0 transparent;*/
@@ -52,6 +46,9 @@ footer {
 
 .wrap{
  	background-color: #FAF9F7;
+  	-webkit-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
+	-moz-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
+	transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
 }
 
 .wL{
@@ -165,56 +162,24 @@ footer {
 	background-color: black;
 }
 
-.sMsection, .pointer{
+.pointer{
 	cursor: pointer;
 }
 
-.r_sociales{
-	height:24px;
-	width:24px;
-	margin: 0px;
-}
-
-.font-copyright{
-	font-size: 12px; 
-	margin-top:15px;
-	color: #02a2e9;
-	text-align: center;
-}
-
-.footer{
-/*	margin: 0px;
-	padding: 25px;
-	box-shadow: 1px 1px 30px rgba(50, 50, 50, 0.1);
-	border-radius:5px;
-	color: #fff;
-	background: #141414;*/
-}
 .footer_union{
 	margin-top: -25px;
 }
 
-.bottom-bar {
-	background: #141414;
-	background: -moz-linear-gradient(top, #32323a 0%, #141414 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32323a), color-stop(100%, #141414));
-	background: -webkit-linear-gradient(top, #32323a 0%, #141414 100%);
-	background: -o-linear-gradient(top, #32323a 0%, #141414 100%);
-	background: -ms-linear-gradient(top, #32323a 0%, #141414 100%);
-	background: linear-gradient(to bottom, #32323a 0%, #141414 100%);
-	/*border-bottom: 2px solid #0fa1e0;*/
-	position: fixed;
-	z-index: 9;
-	width: 100%;
-	height: 30px;
-	bottom: 0px;
-	padding-top: 10px;
+
+.footer{
+	background: #333;
+	padding-top:10px;
 }
 
-.footer a:link {text-decoration:none; color:#FFF;}
-.footer a:visited {text-decoration:none; color:#FFF;}
-.footer a:hover {text-decoration:none; color:#FFF;}
-.footer a:active {text-decoration:none; color:#FFF;}
+.footer a :link {text-decoration:none !important;}
+.footer a :visited {text-decoration:none !important;}
+.footer a :hover {text-decoration:none !important;}
+.footer a :active {text-decoration:none !important;}
 
 .footer ul li {
 	list-style-type: none;
@@ -228,11 +193,6 @@ footer {
 	z-index: 7;
 	opacity: 0;
 	display: none;
-}
-
-.footer{
-	background: #333;
-	padding-top:10px;
 }
 
 .background-top{
@@ -251,6 +211,32 @@ footer {
 	-moz-box-shadow: 0px 0px 18px #333;
 	-webkit-box-shadow: 0px 0px 18px #333;
 	box-shadow: 0px 0px 18px #333;
+}
+
+.bottom-bar {
+	background: #141414;
+	/*border-bottom: 2px solid #0fa1e0;*/
+	position: fixed;
+	z-index: 9;
+	width: 100%;
+	height: 30px;
+	bottom: 0px;
+	padding-top: 10px;
+}
+
+
+.break-a{
+	width: 413px;
+	height: 21px;
+	background: url("../img/break-a.png") no-repeat;
+	margin: 0 auto;
+}
+
+.break-b{
+	width: 413px;
+	height: 21px;
+	background: url("../img/break-b.png") no-repeat;
+	margin: 0 auto;
 }
 
 /*********************************MEDIA*********************************/
