--- a/css/font.css
+++ b/css/font.css
@@ -9,24 +9,9 @@
  src: url("fonts/Lato.woff") format('woff');
 }
 
-@font-face {
-  font-family: "OpenSans";
- src: url("fonts/OpenSansCondensed.woff") format('woff');
-}
-
-@font-face {
-  font-family: "Satellite";
- src: url("fonts/Satellite.otf") format('opentype');
-}
-
-@font-face {
-  font-family: "UbuntuL";
- src: url("fonts/Ubuntu-L.woff") format('woff');
-}
-
 /*DOM Elements*/
 body {
-	font: 100%/1.5 'UbuntuL','Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 100%/1.5 'Lato','Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 html{
@@ -100,20 +85,3 @@ p, ul, ol, dl, blockquote {
     line-height: 1.5em; /* 24 / 16 */
     margin-bottom: 1.5em; /* 24 / 16 */
 }
-
-/*test*/
-/*p {
-    font-family: "Satellite",Arial, Helvetica, sans-serif;
-}
-
-h1{
-    font-family: "Satellite", Arial, Helvetica, sans-serif;
-}
-
-h2{
-    font-family: "Satellite", Arial, Helvetica, sans-serif;
-}
-
-h4{
-    font-family: "Satellite", Arial, Helvetica, sans-serif;
-}*/
