--- a/css/grid.css
+++ b/css/grid.css
@@ -2,7 +2,7 @@
   max-width: 940px;
   padding: 0 10px 0 10px;
   margin: 0 auto;
-  overflow-x: scroll;
+  /*overflow-x: scroll;*/
   min-height: 100%;
 }
 
