--- a/css/menu.css
+++ b/css/menu.css
@@ -49,9 +49,9 @@
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#cacaca), to(#848484));
    background-image: -moz-linear-gradient(top, #cacaca, #848484);
 
-   box-shadow: inset 0 0 10px #000;
+/*   box-shadow: inset 0 0 10px #000;
      -moz-box-shadow: inset 0 0 10px #000;
-     -webkit-box-shadow: inset 0 0 10px #000;
+     -webkit-box-shadow: inset 0 0 10px #000;*/
 }
 
 /* left nav */
