--- a/css/grid.css
+++ b/css/grid.css
@@ -43,6 +43,20 @@
 /*.grid-12 {width: 97.195%; margin: 0;}*/
 .grid-0 {/*width: 97.917%;*/ width: 100%; margin: 0;}
 
+.non-1 {width: 6.15%;}
+.non-2 {width: 14.583%;}
+.non-3 {width: 22.917%;}
+.non-4, .grid-one-third {width: 31.25%;}
+.non-5 {width: 39.583%;}
+.non-6, .grid-half {width: 47.917%;}
+.non-7 {width: 56.25%;}
+.non-8, .grid-two-thirds {width: 64.583%;}
+.non-9 {width: 72.917%;}
+.non-10 {width: 81.25%;}
+.non-11 {width: 89.583%;}
+.non-12 {width: 97.5%; margin: 0;}
+.non-0 { width: 100%; margin: 0;}
+
 @media screen and (max-width: 700px) {
   .grids {
     margin: 0;
