--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,9 @@ footer {
 
 .menuBack{
 	width: 100%;
+	height: 100%;
 	background-color: #333;
-	position: absolute;
+	position: fixed;
 	top:0;
 	z-index: 7;
 	opacity: 0;
