--- a/css/backup/kraken.css
+++ b/css/backup/kraken.css
@@ -1,6 +1,7 @@
 /*Kraken by @ivan_cduran (ivancduran.com)*/
 /*Toast 1.0 by @_dte (daneden.me) modified by @ivan_cduran (ivancduran.com)*/
 /*Responsive slides by @viljamis (responsive-slides.viljamis.com) modified by @ivan_cduran (ivancduran.com)*/
+@import url('reset.css');
 @import url('grid.css');
 @import url('style.css');
 @import url('responsiveslides.css');
