--- a/css/sass/progressbar.scss
+++ b/css/sass/progressbar.scss
@@ -15,7 +15,7 @@
   margin: 0 -1px;
   min-width: 30px;
   height: 18px;
-  line-height: 16px;
+  line-height: 18px;
   text-align: right;
   background: #cccccc;
   border: 1px solid;
@@ -30,7 +30,7 @@
 }
 .progress > span > span {
   padding: 0 8px;
-  font-size: 15px;
+  // font-size: 15px;
   font-weight: bold;
   color: #404040;
   color: rgba(0, 0, 0, 0.7);
