--- a/css/grid.css
+++ b/css/grid.css
@@ -18,50 +18,135 @@
   /* Fix inline-block weirdness */
   /*letter-spacing: -.25em; */
 }
-.grids [class*="grid-"], .footer [class*="grid-"]{
+
+.grids [class*="grid-"], .footer [class*="grid-"] {
   display: inline-block;
   margin: 0 0 0 1.3%;
-  -webkit-box-sizing: border-box; /* Allow padding & borders on grids without breaking. IE8+ */
+  -webkit-box-sizing: border-box;
+  /* Allow padding & borders on grids without breaking. IE8+ */
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   vertical-align: top;
-  letter-spacing: 0; /* And restore our letter spacing. */
+  letter-spacing: 0;
+  /* And restore our letter spacing. */
 }
 
-.grid-1 {width: 6.15%;}
-.grid-2 {width: 14.583%;}
-.grid-3 {width: 22.917%;}
-.grid-4, .grid-one-third {width: 31.25%;}
-.grid-5 {width: 39.583%;}
-.grid-6, .grid-half {width: 47.917%;}
-.grid-7 {width: 56.25%;}
-.grid-8, .grid-two-thirds {width: 64.583%;}
-.grid-9 {width: 72.917%;}
-.grid-10 {width: 81.25%;}
-.grid-11 {width: 89.583%;}
-.grid-12 {width: 97.5%; /*width: 100%;*/ margin: 0;}
-/*.grid-12 {width: 97.195%; margin: 0;}*/
-.grid-0 {/*width: 97.917%;*/ width: 100%; margin: 0;}
+.grid-1 {
+  width: 6.15%;
+}
 
-.non-1 {width: 6.15%;}
-.non-2 {width: 14.583%;}
-.non-3 {width: 22.917%;}
-.non-4, .grid-one-third {width: 31.25%;}
-.non-5 {width: 39.583%;}
-.non-6, .grid-half {width: 47.917%;}
-.non-7 {width: 56.25%;}
-.non-8, .grid-two-thirds {width: 64.583%;}
-.non-9 {width: 72.917%;}
-.non-10 {width: 81.25%;}
-.non-11 {width: 89.583%;}
-.non-12 {width: 97.5%; margin: 0;}
-.non-0 { width: 100%; margin: 0;}
+.grid-2 {
+  width: 14.583%;
+}
+
+.grid-3 {
+  width: 22.917%;
+}
+
+.grid-4, .grid-one-third {
+  width: 31.25%;
+}
+
+.grid-5 {
+  width: 39.583%;
+}
+
+.grid-6, .grid-half {
+  width: 47.917%;
+}
+
+.grid-7 {
+  width: 56.25%;
+}
+
+.grid-8, .grid-two-thirds {
+  width: 64.583%;
+}
+
+.grid-9 {
+  width: 72.917%;
+}
+
+.grid-10 {
+  width: 81.25%;
+}
+
+.grid-11 {
+  width: 89.583%;
+}
+
+.grid-12 {
+  width: 97.5%;
+  /*width: 100%;*/
+  margin: 0;
+}
+
+/*.grid-12 {width: 97.195%; margin: 0;}*/
+.grid-0 {
+  /*width: 97.917%;*/
+  width: 100%;
+  margin: 0;
+}
+
+.non-1 {
+  width: 6.15%;
+}
+
+.non-2 {
+  width: 14.583%;
+}
+
+.non-3 {
+  width: 22.917%;
+}
+
+.non-4, .grid-one-third {
+  width: 31.25%;
+}
+
+.non-5 {
+  width: 39.583%;
+}
+
+.non-6, .grid-half {
+  width: 47.917%;
+}
+
+.non-7 {
+  width: 56.25%;
+}
+
+.non-8, .grid-two-thirds {
+  width: 64.583%;
+}
+
+.non-9 {
+  width: 72.917%;
+}
+
+.non-10 {
+  width: 81.25%;
+}
+
+.non-11 {
+  width: 89.583%;
+}
+
+.non-12 {
+  width: 97.5%;
+  margin: 0;
+}
+
+.non-0 {
+  width: 100%;
+}
 
 @media screen and (max-width: 700px) {
   .grids {
     margin: 0;
     width: auto;
   }
+
   .grids [class*="grid-"] {
     display: block;
     width: 100%;
