--- a/css/sass/grid.scss
+++ b/css/sass/grid.scss
@@ -55,7 +55,7 @@
 .non-10 {width: 81.25%;}
 .non-11 {width: 89.583%;}
 .non-12 {width: 97.5%; margin: 0;}
-.non-0 { width: 100%; margin: 0;}
+.non-0 { width: 100%;}
 
 @media screen and (max-width: 700px) {
   .grids {
