--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,7 +1,8 @@
 /*fix wrap*/
 html, body {
-	height: 100%;
+    height: auto;
 	min-height: 100%;
+	height: 100%;
 }
 
 nav, li, img, .progress > span {
@@ -33,16 +34,19 @@ hr{
 }
 
 footer {
+	position: fixed;
+	margin: 0px;
+	padding: 0px;
 	text-align: left;
 	color: #FFF;
 	font-size: 12px;
 	width: 100%;
 	height: 280px;
-	line-height: 10px;
-	clear: both;
-	position: fixed;
+	// line-height: 10px;
+	// clear: both;
 	z-index: -20;
 	bottom: 0px;
+	left: 0px;
 }
 
 .wrap{
@@ -81,6 +85,10 @@ footer {
 
 .mL{
 	margin-left: 4%;
+}
+
+.headImg{
+	background: url("../img/bg/012.png") repeat 100% 100%;
 }
 
 .arrowL{
@@ -168,9 +176,21 @@ footer {
 }
 
 .footer_union{
-	margin-top: -25px;
+	// margin-top: -25px;
 }
 
+.clearfix:after {
+   content: ".";
+   display: block;
+   clear: both;
+   visibility: hidden;
+   line-height: 0;
+   height: 0;
+}
+ 
+.clearfix {
+   // display: inline-block;
+}
 
 .footer{
 	background: #333;
@@ -191,10 +211,11 @@ footer {
 	height: 100%;
 	background-color: #333;
 	position: fixed;
-	top:0;
+	bottom: 0;
 	z-index: 7;
 	opacity: 0;
 	display: none;
+	zoom: 2;
 }
 
 .background-top{
@@ -246,37 +267,39 @@ footer {
 /*landscape phone*/
 @media screen and (max-width: 320px) {
 
-.circle{
-	width: 100px;
-	height: 100px;
-}
+	.circle{
+		width: 100px;
+		height: 100px;
+	}
 
 }
 
 /*normal phone*/
 @media screen and (min-width: 320px) and (max-width: 480px)  {
-.circle{
-	width: 200px;
-	height: 200px;
-}
+
+	.circle{
+		width: 200px;
+		height: 200px;
+	}
 
 }
 
 /*large phone and tablets*/
 @media screen and (min-width: 480px) and (max-width: 767px) {
-.circle{
-	width: 300px;
-	height: 300px;
-}
+
+	.circle{
+		width: 300px;
+		height: 300px;
+	}
 
 }
 
 /*ipad*/
 @media screen and (min-width: 767px) and (max-width: 1024px) {
 
-.circle{
-	width: 400px;
-	height: 400px;
-}
+	.circle{
+		width: 400px;
+		height: 400px;
+	}
 
 }
