--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,6 @@ nav, li, img, .progress > span {
 
 input[type=text], textarea{
 	border: 1px solid #aaaaaa;
-	/*background: url("../img/input_bg.png") no-repeat scroll 0 0 transparent;*/
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
@@ -42,53 +41,14 @@ footer {
 	font-size: 12px;
 	width: 100%;
 	height: 280px;
-	// line-height: 10px;
-	// clear: both;
 	z-index: -20;
 	bottom: 0px;
 	left: 0px;
 }
 
-.wrap{
- 	background-color: #FAF9F7;
-  	-webkit-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-	-moz-transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-	transition: all .2s cubic-bezier(0.500, 0.885, 0.32, 1.1);
-}
-
-.wL{
-	max-width: 960px;
-	padding: -10px;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.wN{
-	max-width: 960px;
-	padding: 0px;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.logoL{
-	margin: 5px;
-}
-
-.logoR{
-	float:right;
-}
-
 .shadowWrap{
-	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .1);
-	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .1);
-}
-
-.mL{
-	margin-left: 4%;
-}
-
-.headImg{
-	background: url("../img/bg/012.png") repeat 100% 100%;
+	// -webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .1);
+	// box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .1);
 }
 
 .arrowL{
@@ -109,14 +69,6 @@ footer {
 	border-right: 14px solid transparent;
 	border-top: 15px solid black;
 	position: absolute;
-}
-
-.bgGray{
-	background-color: #E8E8E8;
-	border-radius: 8px;
-	margin: 5px 0px 5px 0px;
-	padding: 5px 0px 5px 0px;
-	border: 4px solid #fff;
 }
 
 .center{
@@ -166,10 +118,6 @@ footer {
 	cursor: pointer;
 }
 
-.footer_union{
-	// margin-top: -25px;
-}
-
 .clearfix:after {
    content: ".";
    display: block;
@@ -178,7 +126,7 @@ footer {
    line-height: 0;
    height: 0;
 }
- 
+
 .clearfix {
    // display: inline-block;
 }
@@ -251,30 +199,4 @@ footer {
 	height: 21px;
 	background: url("../img/break-b.png") no-repeat;
 	margin: 0 auto;
-}
-
-/*********************************MEDIA*********************************/
-
-/*landscape phone*/
-@media screen and (max-width: 320px) {
-
-
-}
-
-/*normal phone*/
-@media screen and (min-width: 320px) and (max-width: 480px)  {
-
-
-}
-
-/*large phone and tablets*/
-@media screen and (min-width: 480px) and (max-width: 767px) {
-
-
-}
-
-/*ipad*/
-@media screen and (min-width: 767px) and (max-width: 1024px) {
-
-
 }
