--- a/css/grid.css
+++ b/css/grid.css
@@ -2,7 +2,6 @@
   max-width: 940px;
   padding: 0 10px 0 10px;
   margin: 0 auto;
-  /*overflow-x: scroll;*/
   min-height: 100%;
 }
 
@@ -14,12 +13,10 @@
   /* So we can make grids out of lists. */
   overflow: hidden;
   /* Clear the floats */
-  /*clear: both;*/
-  /* Fix inline-block weirdness */
-  /*letter-spacing: -.25em; */
 }
 
-.grids [class*="grid-"], .footer [class*="grid-"] {
+.grids [class*="grid-"],
+.footer [class*="grid-"] {
   display: inline-block;
   margin: 0 0 0 1.3%;
   -webkit-box-sizing: border-box;
@@ -43,7 +40,8 @@
   width: 22.917%;
 }
 
-.grid-4, .grid-one-third {
+.grid-4,
+.grid-one-third {
   width: 31.25%;
 }
 
@@ -51,7 +49,8 @@
   width: 39.583%;
 }
 
-.grid-6, .grid-half {
+.grid-6,
+.grid-half {
   width: 47.917%;
 }
 
@@ -59,7 +58,8 @@
   width: 56.25%;
 }
 
-.grid-8, .grid-two-thirds {
+.grid-8,
+.grid-two-thirds {
   width: 64.583%;
 }
 
@@ -81,9 +81,7 @@
   margin: 0;
 }
 
-/*.grid-12 {width: 97.195%; margin: 0;}*/
 .grid-0 {
-  /*width: 97.917%;*/
   width: 100%;
   margin: 0;
 }
@@ -100,7 +98,8 @@
   width: 22.917%;
 }
 
-.non-4, .grid-one-third {
+.non-4,
+.non-one-third {
   width: 31.25%;
 }
 
@@ -108,7 +107,8 @@
   width: 39.583%;
 }
 
-.non-6, .grid-half {
+.non-6,
+.non-half {
   width: 47.917%;
 }
 
@@ -116,7 +116,8 @@
   width: 56.25%;
 }
 
-.non-8, .grid-two-thirds {
+.non-8,
+.non-two-thirds {
   width: 64.583%;
 }
 
