--- a/css/kraken.css
+++ b/css/kraken.css
@@ -22,6 +22,8 @@
 
 @import url("anim.css");
 
+@import url("modal.css");
+
 @import url("custom.css");
 
 /*Kraken by @ivan_cduran (ivancduran.com)*/
