--- a/css/kraken.css
+++ b/css/kraken.css
@@ -1,14 +1,25 @@
+@import url("grid.css");
+
+@import url("style.css");
+
+@import url("responsiveslides.css");
+
+@import url("menu.css");
+
+@import url("buttons.css");
+
+@import url("font.css");
+
+@import url("progressbar.css");
+
+@import url("tooltip.css");
+
+@import url("caption.css");
+
+@import url("anim.css");
+
 /*Kraken by @ivan_cduran (ivancduran.com)*/
+
 /*Toast 1.0 by @_dte (daneden.me) modified by @ivan_cduran (ivancduran.com)*/
+
 /*Responsive slides by @viljamis (responsive-slides.viljamis.com) modified by @ivan_cduran (ivancduran.com)*/
-@import url('grid.css');
-@import url('style.css');
-@import url('responsiveslides.css');
-@import url('menu.css');
-@import url('buttons.css');
-@import url('font.css');
-@import url('progressbar.css');
-@import url('tooltip.css');
-@import url('caption.css');
-@import url('anim.css');
-@import url('modal.css');
