--- a/css/anim.css
+++ b/css/anim.css
@@ -1,21 +1,15 @@
 .animated {
   -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
   -ms-animation-fill-mode: both;
-  -o-animation-fill-mode: both;
   animation-fill-mode: both;
   -webkit-animation-duration: 1s;
-  -moz-animation-duration: 1s;
   -ms-animation-duration: 1s;
-  -o-animation-duration: 1s;
   animation-duration: 1s;
 }
 
 .animated.hinge {
   -webkit-animation-duration: 1s;
-  -moz-animation-duration: 1s;
   -ms-animation-duration: 1s;
-  -o-animation-duration: 1s;
   animation-duration: 1s;
 }
 
@@ -33,76 +27,46 @@
   }
 }
 
-@-moz-keyframes shake {
-  0%, 100% {
-    -moz-transform: translateX(0);
-  }
-
-  10%, 30%, 50%, 70%, 90% {
-    -moz-transform: translateX(-10px);
-  }
-
-  20%, 40%, 60%, 80% {
-    -moz-transform: translateX(10px);
-  }
-}
-
-@-o-keyframes shake {
-  0%, 100% {
-    -o-transform: translateX(0);
-  }
-
-  10%, 30%, 50%, 70%, 90% {
-    -o-transform: translateX(-10px);
-  }
-
-  20%, 40%, 60%, 80% {
-    -o-transform: translateX(10px);
-  }
-}
-
 @keyframes shake {
   0%, 100% {
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
     transform: translateX(0);
   }
 
   10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-10px);
+    -ms-transform: translateX(-10px);
     transform: translateX(-10px);
   }
 
   20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(10px);
+    -ms-transform: translateX(10px);
     transform: translateX(10px);
   }
 }
 
 .shake {
   -webkit-animation-name: shake;
-  -moz-animation-name: shake;
-  -o-animation-name: shake;
   animation-name: shake;
   border: 1px solid red !important;
 }
 
 .sken {
   -webkit-transform: skew(180deg, 90deg);
-  -moz-transform: skew(180deg, 90deg);
-  -o-transform: skew(180deg, 90deg);
   -ms-transform: skew(180deg, 90deg);
   transform: skew(180deg, 90deg);
 }
 
 .scale {
   -webkit-transform: scale(3);
-  -moz-transform: scale(3);
-  -o-transform: scale(3);
   -ms-transform: scale(3);
   transform: scale(3);
 }
 
 .rotate {
   -webkit-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-  -moz-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
-  -o-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
   -ms-transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
   transform: rotateX(360deg) rotateY(320deg) rotateZ(1080deg);
 }
@@ -113,8 +77,6 @@
   border-width: 30px;
   border-radius: 50%;
   -webkit-animation: spin 1s linear infinite;
-  -moz-animation: spin 1s linear infinite;
-  -o-animation: spin 1s linear infinite;
   animation: spin 1s linear infinite;
   border-style: double;
   border-color: #19bee1 transparent;
@@ -126,20 +88,10 @@
   }
 }
 
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(359deg);
-  }
-}
-
-@-o-keyframes spin {
-  100% {
-    -moz-transform: rotate(359deg);
-  }
-}
-
 @keyframes spin {
   100% {
+    -webkit-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
     transform: rotate(359deg);
   }
 }
