--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -4,7 +4,6 @@
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
   border-radius: 10px;
-  -moz-box-shadow: inset 1px 1px 10px #6e6d6e;
   -webkit-box-shadow: inset 1px 1px 10px #6e6d6e;
   box-shadow: inset 1px 1px 10px #6e6d6e;
 }
@@ -22,8 +21,7 @@
   border-color: #bfbfbf #b3b3b3 #9e9e9e;
   border-radius: 10px;
   background-image: -webkit-linear-gradient(top, #f0f0f0, #dbdbdb 70%, #cccccc);
-  background-image: -moz-linear-gradient(top, #f0f0f0, #dbdbdb 70%, #cccccc);
-  background-image: -o-linear-gradient(top, #f0f0f0, #dbdbdb 70%, #cccccc);
+  background-image: -webkit-gradient(linear, top left, bottom left, from(#f0f0f0), color-stop(70%, #dbdbdb), to(#cccccc));
   background-image: linear-gradient(to bottom, #f0f0f0, #dbdbdb 70%, #cccccc);
   -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2);
