--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -1,13 +1,20 @@
 [tooltip-text] {
-  position: relative; }
+  position: relative;
+}
 
-.tooltip-1[tooltip-text]::before, .tooltip-1[tooltip-text]::after {
+.tooltip-1[tooltip-text]::before,
+.tooltip-1[tooltip-text]::after {
   opacity: 0;
-  transition: 0.2s; }
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
 .tooltip-1[tooltip-text]::after {
   content: attr(tooltip-text);
   position: absolute;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   bottom: 125%;
   border-radius: 10px;
@@ -15,7 +22,9 @@
   color: white;
   padding: 0.45rem 0.8rem;
   font-size: 90%;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
+
 .tooltip-1[tooltip-text]::before {
   content: "";
   width: 0;
@@ -27,19 +36,30 @@
   bottom: 125%;
   margin-bottom: -4px;
   left: 50%;
-  margin-left: 5px; }
-.tooltip-1[tooltip-text]:hover::before, .tooltip-1[tooltip-text]:hover::after {
+  margin-left: 5px;
+}
+
+.tooltip-1[tooltip-text]:hover::before,
+.tooltip-1[tooltip-text]:hover::after {
   opacity: 1;
   bottom: 115%;
-  transition: 0.2s 0.3s; }
+  -webkit-transition: 0.2s 0.3s;
+  transition: 0.2s 0.3s;
+}
 
-.tooltip-2[tooltip-text]::before, .tooltip-2[tooltip-text]::after {
+.tooltip-2[tooltip-text]::before,
+.tooltip-2[tooltip-text]::after {
   opacity: 0;
-  transition: 0.2s; }
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
 .tooltip-2[tooltip-text]::after {
   content: attr(tooltip-text);
   position: absolute;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   top: 125%;
   border-radius: 10px;
@@ -47,7 +67,9 @@
   color: white;
   padding: 0.45rem 0.8rem;
   font-size: 90%;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
+
 .tooltip-2[tooltip-text]::before {
   content: "";
   width: 0;
@@ -59,8 +81,13 @@
   top: 125%;
   margin-top: -4px;
   left: 50%;
-  margin-left: 5px; }
-.tooltip-2[tooltip-text]:hover::before, .tooltip-2[tooltip-text]:hover::after {
+  margin-left: 5px;
+}
+
+.tooltip-2[tooltip-text]:hover::before,
+.tooltip-2[tooltip-text]:hover::after {
   opacity: 1;
   top: 115%;
-  transition: 0.2s 0.3s; }
+  -webkit-transition: 0.2s 0.3s;
+  transition: 0.2s 0.3s;
+}
