--- a/css/media.css
+++ b/css/media.css
@@ -1,9 +1,25 @@
 /*********************************MEDIA QUERIES*********************************/
 
 /*landscape phone*/
+@media screen and (max-width: 320px) {
+
+
+}
 
 /*normal phone*/
+@media screen and (min-width: 320px) and (max-width: 480px)  {
+
+
+}
 
 /*large phone and tablets*/
+@media screen and (min-width: 480px) and (max-width: 767px) {
+
+
+}
 
 /*ipad*/
+@media screen and (min-width: 767px) and (max-width: 1024px) {
+
+
+}
