--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,12 +1,21 @@
 // page container
-.container{
+body{
+  background: url("../img/noise.png");
   background-color: #FAF9F7;
 }
 
-.bgGray{
-	background-color: #E8E8E8;
-	border-radius: 8px;
-	margin: 5px 0px 5px 0px;
-	padding: 5px 0px 5px 0px;
-	border: 4px solid #fff;
+.container {
+  background: url("../img/bg-uniform.png");
+  background-color: #FFF;
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.39);
+  -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.39);
+  box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.39);
+}
+
+.bgGray {
+  background-color: #E8E8E8;
+  border-radius: 8px;
+  margin: 5px 0px 5px 0px;
+  padding: 5px 0px 5px 0px;
+  border: 4px solid #fff;
 }
