--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,12 @@ footer {
 
 .pointer {
   cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .clearfix:after {
