--- a/css/buttons.css
+++ b/css/buttons.css
@@ -7,7 +7,6 @@
   margin: 0;
   text-decoration: none;
   text-align: center;
-  text-shadow: 1px 1px 0 #fff;
   font: 11px/normal sans-serif;
   color: #333;
   white-space: nowrap;
@@ -30,9 +29,8 @@
   border-color: #3072b3;
   border-bottom-color: #2a65a0;
   text-decoration: none;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3);
   color: #fff;
-  background-color: #3c8dde;
+  background-color: #3f98dc;
 }
 
 .button:active,
