--- a/css/kraken.css
+++ b/css/kraken.css
@@ -24,7 +24,10 @@
 
 @import url("modal.css");
 
-@import url("custom.css");
+@import url("switch.css");
+
+@import url("light_custom.css");
+
 
 /*Kraken by @ivan_cduran (ivancduran.com)*/
 
