--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@ nav, li, img, .progress > span {
 	transition: all .5s cubic-bezier(0.500, 0.885, 0.32, 1.1);
 }
 
-input[type=text], textarea{
+input[type=text], input[type=password] ,textarea{
 	border: 1px solid #aaaaaa;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
