--- a/css/grid.css
+++ b/css/grid.css
@@ -11,8 +11,9 @@
   /*margin: 0 0 0 -1.7%;*/
   list-style: none;
   /* So we can make grids out of lists. */
-  overflow: hidden;
+  overflow: visible;
   /* Clear the floats */
+  clear: both;
 }
 
 .grids [class*="grid-"],
@@ -29,7 +30,7 @@
 }
 
 .grid-1 {
-  width: 6.15%;
+  width: 6.3%;
 }
 
 .grid-2 {
@@ -76,7 +77,7 @@
 }
 
 .grid-12 {
-  width: 97.5%;
+  width: 97.45%;
   /*width: 100%;*/
   margin: 0;
 }
@@ -87,7 +88,7 @@
 }
 
 .non-1 {
-  width: 6.15%;
+  width: 6.3%;
 }
 
 .non-2 {
@@ -134,7 +135,7 @@
 }
 
 .non-12 {
-  width: 97.5%;
+  width: 97.45%;
   margin: 0;
 }
 
